# SUN-EM-CMOM

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  acc_job.qsub  build.sh  cbfm.sh  chpc_acc_build.sh  chpc_omp_build.sh  chpc_serial.sh  chpc_serial_build.sh  chpc_test  dgfm_build.sh  mbuild.sh  omp_bts.err  omp_bts.out  omp_dgfm_build.sh  omp_job.qsub  pec.mom  pgi.sh  pgi_build.qsub
chpc/: acc_job.qsub  atlas_build.sh  chpc_mpi_build.sh  chpc_omp_build.sh  chpc_ompi_build.sh  chpc_test  cpu_profile.qsub  mpi_serial.qsub  ompi_job.qsub
chpc/100/: 1.qsub  10.qsub  11.qsub  12.qsub  13.qsub  14.qsub  15.qsub  16.qsub  17.qsub  18.qsub  19.qsub  2.qsub  20.qsub  3.qsub  4.qsub  5.qsub  6.qsub  7.qsub  8.qsub  9.qsub  q_all.sh
chpc/eight_ele/: 1.qsub  10.qsub  11.qsub  12.qsub  13.qsub  14.qsub  15.qsub  16.qsub  17.qsub  18.qsub  19.qsub  2.qsub  20.qsub  21.qsub  22.qsub  23.qsub  24.qsub  3.qsub  4.qsub  5.qsub  6.qsub  7.qsub  8.qsub  9.qsub
chpc/feko/: 1.qsub  2.qsub  3.qsub  4.qsub  5.qsub  bow_tie_array_200.fek  bow_tie_array_200.out.REMOVED.git-id  bow_tie_array_m.fek  bow_tie_array_m.pre  bow_tie_array_med.bof.REMOVED.git-id  bow_tie_array_med.fek  bow_tie_array_med.pre  bow_tie_array_med.str  bow_tie_array_med.str.REMOVED.git-id  feko.err  feko_2.err  feko_5.err  serial_tuning_small.qsub
chpc/four_ele/: 1.qsub  10.qsub  11.qsub  12.qsub  13.qsub  14.qsub  15.qsub  16.qsub  2.qsub  3.qsub  4.qsub  5.qsub  6.qsub  7.qsub  8.qsub  9.qsub  q_all.sh
chpc/lapack_thread_test/: 1.qsub  2.qsub  3.qsub  4.qsub
chpc/mpiVomp/: 1_proc.qsub  1_thrd.qsub
chpc/nompi_build/: Makefile  cmake_install.cmake  mom_mpi.REMOVED.git-id
chpc/old/: mpi_serial.qsub  omp_job.qsub  profile.qsub
chpc/ompi_test/: 1.qsub  10.qsub  11.qsub  12.qsub  13.qsub  14.qsub  15.qsub  16.qsub  2.qsub  3.qsub  4.qsub  5.qsub  6.qsub  7.qsub  8.qsub  9.qsub
chpc/ompi_test_2/: 1.qsub  10.qsub  11.qsub  13.qsub  14.qsub  15.qsub  3.qsub  4.qsub  5.qsub  9.qsub
chpc/ompi_test_5/: 12.qsub  4.qsub  5.qsub
chpc/results/: graph.py  profile.out
chpc_results/: acc_26_05.out  acc_btl.err  omp_bts_8.err  omp_bts_8.out  omp_bts_lll.err
doc/: Doxyfile
examples/: pec_plate.mom  pec_plate.sol  ref
examples/a/: bow_tie_array_small.mom.REMOVED.git-id
examples/bow_tie_array/: bow_tie_array.bof  bow_tie_array.fek  bow_tie_array.mom  bow_tie_array.out  bow_tie_array_100.pre  bow_tie_array_150.bof  bow_tie_array_150.fek  bow_tie_array_150.out.REMOVED.git-id  bow_tie_array_200.bof  bow_tie_array_200.fek  bow_tie_array_200.mom  bow_tie_array_200.mom.REMOVED.git-id  bow_tie_array_200.out.REMOVED.git-id  bow_tie_array_200.pre  bow_tie_array_200.pre.bak  bow_tie_array_200.str  bow_tie_array_300.bof  bow_tie_array_300.fek  bow_tie_array_300.mom.REMOVED.git-id  bow_tie_array_300.out.REMOVED.git-id  bow_tie_array_300.pre  bow_tie_array_300.str  bow_tie_array_50.bof  bow_tie_array_50.fek  bow_tie_array_50.mom  bow_tie_array_50.out.REMOVED.git-id  bow_tie_array_50.pre  bow_tie_array_m.bof  bow_tie_array_m.fek  bow_tie_array_m.mom.REMOVED.git-id  bow_tie_array_m.out.REMOVED.git-id  bow_tie_array_m.pre  bow_tie_array_med.pre  bow_tie_array_n.bof  bow_tie_array_n.fek  bow_tie_array_n.mom  bow_tie_array_n.out.REMOVED.git-id  bow_tie_array_n.pre.bak  bow_tie_array_small.bof  bow_tie_array_small.fek  (+13 more)
examples/cbfm_debug/: ascii_simple_plate_array.str  cbfm_debug.bof  cbfm_debug.cfm  cbfm_debug.cfs  cbfm_debug.cfx.bak  cbfm_debug.fek  cbfm_debug.mat  cbfm_debug.mom  cbfm_debug.out  cbfm_debug.pre  cbfm_debug.pre.bak  cbfm_debug.rhs  cbfm_debug.str  pec_plate_driver.m  simple_plate_array.bof  simple_plate_array.cfm  simple_plate_array.cfs  simple_plate_array.cfx  simple_plate_array.cfx.bak  simple_plate_array.fek  simple_plate_array.mat  simple_plate_array.out  simple_plate_array.pre  simple_plate_array.rhs  simple_plate_array.str
examples/chpc/: bow_tie_array_small.bof  bow_tie_array_small.fek  bow_tie_array_small.mom  bow_tie_array_small.out  bow_tie_array_small.pre  bow_tie_array_small.pre.bak  bow_tie_array_small.str
examples/dgfm_big/: dgfm_big.bof  dgfm_big.cfm  dgfm_big.cfs  dgfm_big.cfx  dgfm_big.cfx.bak  dgfm_big.fek  dgfm_big.mom  dgfm_big.out  dgfm_big.pre  dgfm_big.pre.bak  dgfm_big.str
examples/dgfm_small/: dgfm_small.bof  dgfm_small.cfm  dgfm_small.cfs  dgfm_small.fek  dgfm_small.mom  dgfm_small.out  dgfm_small.pre  dgfm_small.pre.bak  dgfm_small.str
examples/example-12/: ascii_pec_plate.str  pec_plate.bof  pec_plate.cfm  pec_plate.cfs  pec_plate.cfx  pec_plate.fek  pec_plate.mat  pec_plate.mom  pec_plate.out  pec_plate.pre  pec_plate.str  pec_plate_driver.m  sol.txt
examples/example-8/: SUNEM_MOM_strip_dipoles_random_array.pre  bow_tie_array.mat.REMOVED.git-id  bow_tie_array.mom  bow_tie_array.out  bow_tie_array.str  bow_tie_array_driver.m  sunem_initialise.m  sunem_mom_bow_tie_array.pre
examples/simple_plate_array/: ascii_simple_plate_array.str  simple_plate_array.bof  simple_plate_array.cfm  simple_plate_array.cfs  simple_plate_array.cfx  simple_plate_array.fek  simple_plate_array.mat  simple_plate_array.mom  simple_plate_array.out  simple_plate_array.rhs  simple_plate_array.sol  simple_plate_array.str
examples/spartan_array/: spartan_array.bof  spartan_array.cfm  spartan_array.cfs  spartan_array.cfx  spartan_array.fek  spartan_array.out  spartan_array.pre  spartan_array.pre.bak  spartan_array.str
examples/spartan_array_fine/: spartan_array_fine.bof  spartan_array_fine.cfm  spartan_array_fine.cfs  spartan_array_fine.cfx  spartan_array_fine.fek  spartan_array_fine.out  spartan_array_fine.pre  spartan_array_fine.pre.bak  spartan_array_fine.str
examples/strip_dipole/: strip_dipole.bof  strip_dipole.mom
examples/strip_dipole_array/: strip_dipole_array.bof  strip_dipole_array.cfx.bak  strip_dipole_array.mom  strip_dipole_array.pre  strip_dipole_array.str  strip_dipole_arsol
examples/three_plate_array/: ascii_three_plate_array.str  three_plate_array.bof  three_plate_array.cfm  (+11 more)
lib/: README.md
src/: README.md  main.cpp  main_mpi.cpp
test/: integration_test.py  test.py
(+697 files in other folders)
